// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen accessGroups config import-export] should create the accessGroups: the accessGroups has been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ accessgroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen accessGroups config import-export] should update the accessGroups: the accessGroups has been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ accessgroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
